app/assets/stylesheets/_plans.sass
#plan-index
  .sidebar
    .search
      margin-top: 25px
      margin-left: 10px
      form
        margin-bottom: 20px

        select.language, input.field, input.submit
          width: 200px
          margin-left: 0

        input.submit
          margin-top: 20px
          line-height: 2em
          padding: 4px 15px

  #filter-message
    text-align: center
    margin: 20px

.resource_list
  .subscription
    overflow: hidden

    .subscription-info
      overflow: hidden
      position: relative
      margin: 0 0 10px 0

    .search_thumbnail,
    .subscription-title,
    .subscription-privacy
      float: left
      box-sizing: border-box

    .search_thumbnail

      img
        width: 50px
        margin: 0 15px 10px 0
        +border-radius(5px)

    .subscription-title
      width: 360px

      h3
        line-height: 1.3em
        margin: 0

    .subscription-privacy
      font-size: 12px
      font-weight: normal
      width: 100px
      position: absolute
      top: 1px
      right: 0

      a
        color: #aaa
        text-decoration: underline

    .progress_wrap
      margin-bottom: 0
      clear: both


// For plan index page

.resource_list
  .plan
    .length
      display: block
      margin-bottom: 10px
      line-height: 1.5em

#sidebar .hd

  a,
  span
    box-sizing: border-box
    display: block

  .search_thumbnail
    border-radius: 5px
    margin: 0 8px 0 0
    overflow: hidden
    display: block
    float: left

    img
      width: 30px
      height: 30px

  a
    line-height: 20px

// Plan about page

#main article.reading_plan_index
  padding: 0
  overflow: hidden

  a,
  p,
  span,
  div
    box-sizing: border-box

  .rp-hero-img
    width: 600px


  h1.keep
    padding: 30px 30px 20px
    margin: 0
    border-bottom: 1px solid #dedddb

  p
    padding: 15px 30px

  .rp-plan-info
    background: image-url("icon_calendar@2x.png") no-repeat 30px center
    background-size: 13px 15px
    border-bottom: 1px solid #dedddb
    padding: 5px 55px

    p
      margin: 0
      padding: 0

  .rp-plan-about
    padding: 20px 30px

    .rp-plan-about-buttons
      overflow: hidden

      .action_button_green,
      .action_button_dark_grey
        width: 265px
        float: left

    .action_button_green
      margin: 0 10px 0 0

    p
      padding: 0
      margin: 15px 0 0
      clear: both

  .plan-privacy-buttons
    display: none
    overflow: hidden
    clear: both
    width: 265px

    .detail-text
      text-align: center
      margin-bottom: 15px
      font-weight: bold
      line-height: 1.4em

    .button-private,
    .button-public
      width: 125px

    .button-private
      float: right

    .button-public
      float: left

// Plan day view

#sidebar
  .rp-subscription-info
    overflow: hidden

    div,
    a,
    span
      box-sizing: border-box

    .action_button_green
      margin: 0 0 10px

    .action_button_dark_grey,
    .plan-privacy-buttons
      display: none

    .detail-text
      font-size: 15px
      font-weight: bold
      text-align: center
      padding: 0 15px
      line-height: 1.4em
      margin-bottom: 10px

    .button-public,
    .button-private
      float: left
      width: 140px
      margin: 0 0 10px

    .button-public
      margin: 0 10px 0 0

// Plan search results (in RP section and global)

.resource_list
  .plan

    .search_thumbnail
      overflow: hidden
      border-radius: 5px
      display: block
      float: left

      img
        width: 100px
        margin: 0 15px 10px 0

    p
      margin: -7px 0 0

